# faustbot

./: .gitignore  CMakeLists.txt  README.md  constants.cpp  constants.hpp  logs.txt  main.cpp  supported_sites.cpp  supported_sites.hpp  task_logs.txt
Infrastructure/: interface.cpp  tasks.cpp  tasks.hpp
WebAccess/: OUTDATED_checkout.py  checkout.cpp  checkout.hpp  checkout.py  communications.txt  product_scraper.cpp  product_scraper.hpp
WebAccess/Contents/: html_body.txt  products_log.txt
shopifybot/: CMakeLists.txt  constants.cpp  constants.hpp  logo.icns  logs.txt  task_logs.txt
shopifybot/Authentication/: addressgenerator.cpp  addressgenerator.hpp  authentication.cpp  authentication.hpp
shopifybot/Graphics/: customwidgets.cpp  customwidgets.hpp  popups.cpp  popups.hpp  resources.qrc  sidebarpopups.cpp  sidebarpopups.hpp  stylesheet.qss  taskwidget.cpp  taskwidget.hpp  titlebar.cpp  titlebar.hpp  window.cpp  window.hpp
shopifybot/Graphics/Stylesheets/: colorcustomizer.cpp  colorcustomizer.hpp  colorstylesheet.qss  colorstylesheet_default.qss  colorstylesheet_withvars.qss  stylesheet.qss
shopifybot/Infrastructure/: ccards.txt  interface.cpp  interface.hpp  profiles.txt  proxies.txt  readme.txt  tasks.cpp  tasks.hpp
shopifybot/Infrastructure/Logs/: task_logs_12amrun0.txt  task_logs_a-ma-maniere0.txt  task_logs_apbstore0.txt  task_logs_bape0.txt  task_logs_beatnic0.txt  task_logs_billionaireboysclub0.txt  task_logs_blkmkt0.txt  task_logs_exclusivedna0.txt  task_logs_kith0.txt  task_logs_socialstatus0.txt
shopifybot/Logs/: task_logs_bodega1.txt  task_logs_kith0.txt  task_logs_kith1.txt  task_logs_kith2.txt  task_logs_kith3.txt  task_logs_socialstatus1.txt
shopifybot/WebAccess/: checkout.cpp  checkout.hpp  checkout.py  product_scraper.cpp  product_scraper.hpp  proxychecker.cpp  proxychecker.hpp  proxychecker.py  pylogs.txt
shopifybot/WebAccess/Contents/: html_body.txt  html_body_12amruntemp.txt  html_body_apbstore0.txt  html_body_beatnic0.txt  html_body_billionaireboysclub0.txt  html_body_bodega1.txt  html_body_bodegatemp.txt  html_body_hanon0.txt  html_body_hanontemp.txt  html_body_kith.txt  html_body_kith0.txt  html_body_kith1.txt  html_body_kith3.txt  html_body_kithtemp.txt  html_body_socialstatustemp.txt  products_log.txt  products_log_beatnic0.txt  products_log_billionaireboysclub0.txt  products_log_bodega1.txt  products_log_hanon0.txt  products_log_kith.txt  products_log_kith1.txt  products_log_kith3.txt  products_log_kithtemp.txt
shopifybot/WebAccess/Contents/Checkout/: cookies2.txt
shopifybot/WebAccess/Contents/CookieJar/: cookies.txt
shopifybot/WebAccess/deprecated/: OUTDATED1_checkout.py  OUTDATED_checkout.py  checkout.py  proxychecker.py  stylesheet.qss
shopifybot_tests/: CMakeLists.txt
shopifybot_tests/Tests/: CMakeLists.txt  WebHandler_UTESTS.cpp
